[metadata]
name = asrertools
version = 0.0.0
author = youshuJi
author_email = zjs20001205@gmail.com
description = A small package about small basic IO operation when coding
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lvzii/asrertools
project_urls =
    Bug Tracker = https://github.com/lvzii/asrertools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src